Updated flutter docs

--- a/flutter/20.11.md
+++ b/flutter/20.11.md
@@ -1,14 +1,14 @@
 <p>
   This document will guide you through the process of Countly SDK installation
-  and it applies to version 21.11.0
+  and it applies to version 20.11.0
 </p>
 <div class="callout callout--info">
   <p class="callout__title">
     <span class="wysiwyg-font-size-large"><strong>Older documentation</strong></span>
   </p>
   <p>
-    To access the documentation for version 20.11 and older, click
-    <a href="/hc/en-us/articles/4409295642137" target="_self" rel="undefined">here.</a>
+    To access the documentation for version 20.04 and older, click
+    <a href="/hc/en-us/articles/900005264923" target="_self" rel="undefined">here.</a>
   </p>
 </div>
 <p>
@@ -58,7 +58,8 @@ flutter run</code></pre>
   dashboard, under the "Applications" menu item.
 </p>
 <pre><code class="JavaScript">Countly.isInitialized().then((bool isInitialized){
-    if(!isInitialized){<br>      CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY);<br>      Countly.initWithConfig(config).then((value){
+    if(!isInitialized){
+      Countly.init(SERVER_URL, APP_KEY ).then((value){
         Countly.start();
       }); // Initialize the countly SDK.
     }else{
@@ -66,9 +67,32 @@ flutter run</code></pre>
     }
   });</code></pre>
 <p>
-  For more information on how to acquire your application key (appKey) and server
-  URL, check
-  <a href="https://support.count.ly/hc/en-us/articles/900000908046-Getting-started-with-SDKs#acquiring-your-application-key-and-server-url" target="_self">here</a>
+  <strong><span class="wysiwyg-font-size-large">Providing the application key</span></strong>
+</p>
+<p>
+  Also called "appKey" as shorthand. The application key is used to identify for
+  which application this information is tracked. You receive this value by creating
+  a new application in your Countly dashboard and accessing it in its application
+  management screen.
+</p>
+<p>
+  <strong>Note: </strong>Ensure you are using the App Key (found under Management
+  -&gt; Applications) and not the API Key. Entering the API Key will not work.
+</p>
+<p>
+  <strong><span class="wysiwyg-font-size-large">Providing the server URL</span></strong>
+</p>
+<p>
+  If you are using Countly Enterprise Edition trial servers, use
+  <code>https://try.count.ly</code>, <code>https://us-try.count.ly</code> or
+  <code>https://asia-try.count.ly</code> It is basically the domain from which
+  you are accessing your trial dashboard.
+</p>
+<p>
+  If you use both Community Edition and Enterprise Edition, use your own domain
+  name or IP address, such as
+  <a href="https://example.com/">https://example.com</a> or
+  <a href="https://ip/">https://IP</a> (if SSL has been set up).
 </p>
 <h2>Enable logging</h2>
 <p>
@@ -78,7 +102,7 @@ flutter run</code></pre>
 <p>
   We advise doing this while implementing Countly features in your application.
 </p>
-<pre><code class="JavaScript">CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY);<br>config.setLoggingEnabled(true);</code></pre>
+<pre><code class="JavaScript">Countly.setLoggingEnabled(true);</code></pre>
 <h2>Device ID</h2>
 <p>
   When the SDK is initialized for the first time and no device ID is provided,
@@ -91,7 +115,7 @@ flutter run</code></pre>
 <p>
   You may provide your own custom device ID when initializing the SDK
 </p>
-<pre><code class="JavaScript">CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY);<br>config.setDeviceId(DEVICE_ID);</code></pre>
+<pre><code class="JavaScript">Countly.init(SERVER_URL, APP_KEY, DEVICE_ID)</code></pre>
 <h2>SDK data storage</h2>
 <p>
   For iOS: SDK data is stored in Application Support Directory in file named "Countly.dat"<br>
@@ -115,7 +139,7 @@ flutter run</code></pre>
   If you want to enable automatic unhandled crash reporting, you need to call this
   before init:
 </p>
-<pre><code class="JavaScript">CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY);<br>config.enableCrashReporting()</code></pre>
+<pre><code class="JavaScript">Countly.enableCrashReporting()</code></pre>
 <p>
   By doing that it will automatically catch all errors that are thrown from within
   the Flutter framework.
@@ -137,7 +161,7 @@ flutter run</code></pre>
   The following call will add the provided segmentation to all recorded crashes.
   Use the following function for this purpose:
 </p>
-<pre><code class="JavaScript">CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY);<br>config.setCustomCrashSegment(Map&lt;String, Object&gt; segments);</code></pre>
+<pre><code class="JavaScript">Countly.setCustomCrashSegment(Map&lt;String, Object&gt; segments);</code></pre>
 <h2>Handled exceptions</h2>
 <p class="p1">
   There are multiple ways you could report a handled exception/error to Countly.
@@ -204,7 +228,7 @@ Countly.logExceptionManual("MESSAGE_STRING", nonfatal, STACK_TRACE_OBJECT, {"_fa
 <pre><code class="JavaScript">Countly.addCrashLog(String logs)</code></pre>
 <h1>Events</h1>
 <p>
-  <a href="http://resources.count.ly/docs/custom-events">Event</a> is any type
+  An <a href="http://resources.count.ly/docs/custom-events">Event</a> is any type
   of action that you can send to a Countly instance, e.g purchase, settings changed,
   view enabled and so. This way it's possible to get much more information from
   your application compared to what is sent from Flutter SDK to Countly instance
@@ -423,25 +447,6 @@ Timer timer = Timer(new Duration(seconds: 5), () {
   If you want to end automatic session tracking you would call:
 </p>
 <pre><code class="JavaScript">Countly.stop();</code></pre>
-<h2 id="manual-sessions" class="anchor-heading">Manual sessions</h2>
-<p>
-  Sometimes it might be preferable to control the session manually instead of relying
-  on the SDK.
-</p>
-<p>It can be enabled during init with:</p>
-<pre><code class="JavaScript">CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY);</code><br>config.enableManualSessionHandling();</pre>
-<p>Afterwards it is up to the implementer to make calls to:</p>
-<ul>
-  <li>Begin session</li>
-  <li>
-    Update session duration. By default, you would call this every 60 seconds
-    after beginning a session so that it is not closed server side. If you would
-    want to increase that duration, you would have to increase the "<span>Maximal Session Duration" in your server API configuration.</span>
-  </li>
-  <li>End session (also updates duration)</li>
-</ul>
-<p>The approprate call to do that are:</p>
-<pre>Countly.beginSession();<br>Countly.updateSession();<br>Countly.endSession();</pre>
 <h1>View tracking</h1>
 <h2>Manual view recording</h2>
 <p>
@@ -524,21 +529,6 @@ Countly.recordView("Dashboard");</code></pre>
   For that, you may use the following call:
 </p>
 <pre><code class="JavaScript">String currentDeviceId = Countly.getCurrentDeviceId();</code></pre>
-<p>
-  <span>You can use </span><code>getDeviceIDType</code><span>&nbsp;method which returns a </span><code>DeviceIDType</code><span> to get the current device ID type. The id type is an enum with the possible values of: </span>
-</p>
-<ul>
-  <li>
-    <span>"DEVELOPER_SUPPLIED" - device ID was supplied by the host app</span>
-  </li>
-  <li>
-    <span>"SDK_GENERATED" - device ID was generated by the SDK</span>
-  </li>
-  <li>
-    <span>"TEMPORARY_ID" - the SDK is in temporary device ID mode</span>
-  </li>
-</ul>
-<pre>DeviceIdType? deviceIdType = await Countly.getDeviceIDType();</pre>
 <h1>Push notifications</h1>
 <h2>Integration</h2>
 <h3>Android setup</h3>
@@ -681,6 +671,7 @@ override func userNotificationCenter(\_ center: UNUserNotificationCenter, didRec
 
 }
 </code></pre>
+
 <h1>User Location</h1>
 <p>
   Countly allows you to send geolocation-based push notifications to your users.
@@ -689,12 +680,12 @@ override func userNotificationCenter(\_ center: UNUserNotificationCenter, didRec
 <h2>Set User Location</h2>
 <p>
   If your app has a different way of detecting location, you may send this information
-  to the Countly Server by using the <code>setLocation</code> of&nbsp;
-  <code>CountlyConfig</code> during init or<code>setUserLocation</code> method
-  after init.
+  to the Countly Server by using the <code>setLocationInit</code> or<code>setLocation</code>
+  methods.
 </p>
 <p>
-  When setting user location information, you would be setting these values:
+  We recommend using the <code>setLocationInit</code> method before initialization
+  to sent location. This includes:
 </p>
 <ul>
   <li>
@@ -710,25 +701,21 @@ override func userNotificationCenter(\_ center: UNUserNotificationCenter, didRec
     <code>IP</code> a string specifying an IP address in IPv4 or IPv6 formats
   </li>
 </ul>
-<p>
-  <span>All values are optional, but at least one should be set.</span>
-</p>
-<pre><code class="JavaScript">// Example for setLocation
-CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY);<br>config.setLocation(country_code: 'TR', city: 'Istanbul', gpsCoordinates: '41.0082,28.9784', ipAddress: '10.2.33.12')</code></pre>
+<pre><code class="JavaScript">// Example for setLocationInit
+Countly.setLocationInit("TR", "Istanbul", "41.0082,28.9784", "10.2.33.12");</code></pre>
 <p>
   Geolocation recording methods may also be called at any time after the Countly
   SDK has started.<br>
-  To do so, use the <code>setUserLocation</code> method as shown below.
+  To do so, use the <code>setLocation</code> method as shown below.
 </p>
-<pre><code class="JavaScript">// Example for setUserLocation
-Countly.setUserLocation(countryCode: 'TR', city: 'Istanbul', gpsCoordinates: '41.0082,28.9784', ipAddress: '10.2.33.12');
+<pre><code class="JavaScript">// Example for setLocation
+Countly.setLocation(latitude, longitude);
 </code></pre>
 <h2>Disable Location</h2>
 <p>
   To erase any cached location data from the device and stop further location tracking,
   use the following method. Note that if after disabling location, the
-  <code>setUserLocation</code> is called with any non-null value, tracking will
-  resume.
+  <code>setLocation</code> is called with any non-null value, tracking will resume.
 </p>
 <pre><code class="JavaScript">//disable location tracking
 Countly.disableLocation();</code></pre>
@@ -750,7 +737,9 @@ Countly.disableLocation();</code></pre>
   <code>setRemoteConfigAutomaticDownload</code> before init. As an optional value
   you can provide a callback to be informed when the request is finished.
 </p>
-<pre><code class="JavaScript">CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY);<br>config.setRemoteConfigAutomaticDownload(true, (error) {<br>   print(error);<br>});</code></pre>
+<pre><code class="JavaScript">Countly.setRemoteConfigAutomaticDownload((result){
+  print(result);
+});</code></pre>
 <p>
   If the callback returns a non-null value, then you can expect that the request
   failed and no values were updated.
@@ -853,12 +842,9 @@ Countly.disableLocation();</code></pre>
 <pre><code class="JavaScript">Countly.askForStarRating();</code></pre>
 <p>
   The star-rating dialog's title, message, and dismiss button text may be customized
-  either through the following functions:
+  either through <code>setStarRatingDialogTexts</code> function.
 </p>
-<pre><code class="JavaScript">CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY);
-config.setStarRatingTextTitle("Custom title"); // Only available for Android
-config.setStarRatingTextMessage("Custom message");
-config.setStarRatingTextDismiss("Custom message"); // Only available for Android</code></pre>
+<pre><code class="JavaScript">Countly.setStarRatingDialogTexts("Custom title", "Custom message", "Custom dismiss button text");</code></pre>
 <h2>Rating widget</h2>
 <p>
   Feedback widget shows a server configured widget to your user devices.
@@ -890,11 +876,7 @@ config.setStarRatingTextDismiss("Custom message"); // Only available for Android
 <p>
   Using that you can call the function to show the widget popup:
 </p>
-<pre><code class="JavaScript">Countly.presentRatingWidgetWithID(RATING_WIDGET_ID, closeButtonText: "close", ratingWidgetCallback: (error) {<br>if(error != null) {<br>   print(error);<br>}<br>});</code></pre>
-<p>
-  <code class="JavaScript">closeButtonText</code> and
-  <code class="JavaScript">ratingWidgetCallback</code> are optional.
-</p>
+<pre><code class="JavaScript">Countly.askForFeedback("5da0877c31ec7124c8bf398d", "Close");</code></pre>
 <h2>Feedback widget</h2>
 <p>
   It is possible to display 2 kinds of Surveys widgets:
@@ -939,14 +921,14 @@ config.setStarRatingTextDismiss("Custom message"); // Only available for Android
   After you have decided which widget you want to display, you would provide that
   object to the following function:
 </p>
-<pre><code class="JavaScript">await Countly.presentFeedbackWidget(widgets.first, 'Close', widgetShown: () {<br>   print('Widget Appeared');<br>}, widgetClosed: () {<br>   print('Widget Dismissed');<br>});</code></pre>
-<p>
-  <code class="JavaScript">widgetShown</code> and
-  <code class="JavaScript">widgetClosed</code> are optional callbacks, you can
-  pass these callbacks if you want to perform some actions when widget appear or
-  dismiss.
-</p>
+<pre><code class="JavaScript">Countly.presentFeedbackWidget(chosenWidget, "CLOSE_BUTTON_TEXT");</code></pre>
 <h2>Feedback widget manual reporting</h2>
+<div class="callout callout--info">
+  <p class="callout__title">
+    <strong><span class="wysiwyg-font-size-large">Supported Platforms</span></strong>
+  </p>
+  <p>Currently this feature is only available for Android</p>
+</div>
 <p>
   There might be some usecases where you might to use the native UI or a custom
   UI you have created instead of our webview solution. In those cases you would
@@ -964,15 +946,7 @@ config.setStarRatingTextDismiss("Custom message"); // Only available for Android
 </p>
 <p>
   Having the <code>CountlyPresentableFeedback</code> object of the widget you would
-  want to display, you could use the '<code class="JavaScript">getFeedbackWidgetData</code>'&nbsp;
-  mehtod to retrieve the widget information with an optional 'onFinished' callback.<br>
-  In case you want to use with callback then you can call '<code class="JavaScript">getFeedbackWidgetData</code>'
-  in this way:
-</p>
-<pre><code class="JavaScript">Countly.getFeedbackWidgetData(chosenWidget, onFinished: (retrievedWidgetData, error) {<br>if (error == null) {<br>}<br>});</code></pre>
-<p>
-  If you want to use it without a callback then you can call '<code class="JavaScript">getFeedbackWidgetData</code>'
-  in this way:
+  want to display, you would use the following call to retrieve the widget information:
 </p>
 <pre><code class="JavaScript">List result = await Countly.getFeedbackWidgetData(chosenWidget) {<br>    error = result[1];<br>    if(error == null) {<br>       Map&lt;String, dynamic&gt; retrievedWidgetData = result[0];<br>    }<br>}</code></pre>
 <p>
@@ -995,6 +969,7 @@ Map&lt;String, Object&gt; reportedResult = {};
 //report the results to the SDK
 Countly.reportFeedbackWidgetManually(chosenWidget, retrievedWidgetData , reportedResult);
 </code></pre>
+
 <p>
   If the user would have closed the widget, you would report that by passaing a
   "null" reportedResult.
@@ -1054,12 +1029,13 @@ Countly.pushValue("type", "morning");
 //remove value from array
 Countly.pullValue("type", "morning");
 </code></pre>
+
 <h1>Application Performance Monitoring</h1>
 <p>
   This SDK provides a few mechanisms for APM. To start using them you would first
   need to enable this feature and give the required consent if it was required.
 </p>
-<pre><code class="JavaScript">CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY);<br>config</code>.setRecordAppStartTime(true); // Enable APM features, which includes the recording of app start time.</pre>
+<pre>Countly.enableApm(); // Enable APM features, which includes the recording of app start time.</pre>
 <p>
   While using APM calls, you have the ability to provide trace keys by which you
   can track those parameters in your dashboard.
@@ -1070,8 +1046,8 @@ Countly.pullValue("type", "morning");
   <code>appLoadingFinished</code> method. Make sure this method is called after
   <code>init</code>.
 </p>
-<pre><code class="JavaScript">//Example of appLoadingFinished<br>CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY);
-Countly.initWithConfig(config ).then((value){<br>Countly.appLoadingFinished();<br>});<br></code></pre>
+<pre><code class="JavaScript">//Example of appLoadingFinished
+Countly.init(SERVER_URL, APP_KEY ).then((value){<br>Countly.appLoadingFinished();<br>});<br></code></pre>
 <p>
   This calculates and records the app launch time for performance monitoring. It
   should be called when the app is loaded and it successfully displayed its first
@@ -1095,7 +1071,7 @@ Countly.initWithConfig(config ).then((value){<br>Countly.appLoadingFinished();<b
 <p>To end a custom trace, use:</p>
 <pre><code class="JavaScript">String traceKey = "Trace Key";<br>Map&lt;String, int&gt; customMetric = {<br>  "ABC": 1233,<br>  "C44C": 1337<br>};<br>Countly.endTrace(traceKey, customMetric);</code></pre>
 <p>
-  In this sample, a Map of integer values is provided when ending a trace. Those
+  In this sameple a Map of integer values is provided when ending a trace. Those
   will be added to that trace in the dashboard.
 </p>
 <h2>Network trace</h2>
@@ -1123,9 +1099,9 @@ Countly.initWithConfig(config ).then((value){<br>Countly.appLoadingFinished();<b
   By default the requirement for consent is disabled. To enable it, you have to
   call <code>setRequiresConsent</code> with true, before initializing Countly.
 </p>
-<pre><code class="JavaScript">CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY);<br>config.setRequiresConsent(true);</code></pre>
+<pre><code class="JavaScript">Countly.setRequiresConsent(true);</code></pre>
 <p>
-  By default, no consent is given. That means that if no consent is enabled, Countly
+  By default no consent is given. That means that if no consent is enabled, Countly
   will not work and no network requests, related to features, will be sent. When
   the consent status of a feature is changed, that change will be sent to the Countly
   server.
@@ -1175,14 +1151,13 @@ Countly.initWithConfig(config ).then((value){<br>Countly.appLoadingFinished();<b
 </ul>
 <h2>Giving consents</h2>
 <p>
-  To give consent for features, you can use the <code>setConsentEnabled</code>of
-  <code>CountlyConfig</code> class or <code>giveConsent</code> after
-  <code>init</code> by passing the feature names as an Array.<br>
-  We recommend using the<code>setConsentEnabled</code>of
-  <code>CountlyConfig</code> because some features require consents before
-  <code>init</code>
+  To give consent for features, you can use the <code>giveConsentInit</code>before
+  <code>init</code> or <code>giveConsent</code> after <code>init</code> by passing
+  the feature names as an Array.<br>
+  We recommend using the <code>giveConsentInit</code>because some features require
+  consents before <code>init</code>
 </p>
-<pre><code class="JavaScript">CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY);<br>config.setConsentEnabled(["location", "sessions", "attribution", "push", "events", "views", "crashes", "users", "push", "star-rating", "apm", "feedback", "remote-config"]);<br></code><code class="JavaScript">Countly.giveConsent(["events", "views", "star-rating", "crashes"]);</code></pre>
+<pre><code class="JavaScript">Countly.giveConsentInit(["location", "sessions", "attribution", "push", "events", "views", "crashes", "users", "push", "star-rating", "apm", "feedback", "remote-config"]);<br></code><code class="JavaScript">Countly.giveConsent(["events", "views", "star-rating", "crashes"]);</code></pre>
 <h2>Removing consents</h2>
 <p>
   If the end-user changes his/her mind about consents at a later time, you will
@@ -1212,7 +1187,7 @@ Countly.initWithConfig(config ).then((value){<br>Countly.appLoadingFinished();<b
   <code>&amp;checksum</code> field before being processed.
 </p>
 <pre><code class="JavaScript">// sending data with salt
-CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY);<br>config.setParameterTamperingProtectionSalt("salt");</code></pre>
+Countly.enableParameterTamperingProtection("salt");</code></pre>
 <p>
   Make sure not to use salt on the Countly server and not on the SDK side, otherwise,
   Countly won't accept any incoming requests.
@@ -1254,6 +1229,7 @@ CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY);<br>config.setParamete
 ...
 }
 </code></pre>
+
 <p>
   Next create a configuration that will preserve the entire Flutter wrapper code.
   Create<strong class="ib cf"> /android/app/proguard-rules.pro</strong> file and
@@ -1273,60 +1249,21 @@ CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY);<br>config.setParamete
   allows you to measure your marketing campaign performance by attributing installs
   from specific campaigns. This feature is available for the Enterprise Edition.
 </p>
+<p>Call this before init.</p>
+<pre><code class="JavaScript">// Enable to measure your marketing campaign performance by attributing installs from specific campaigns.
+Countly.enableAttribution();</code></pre>
 <p>
-  <span>There are 2 forms of attribution: direct Attribution and indirect Attribution.</span><span></span>
-</p>
-<h3>
-  <span>Direct Attribution</span>
-</h3>
-<div class="callout callout--info">
-  <p>
-    Currently, direct attribution is only available for Android.
-  </p>
-</div>
-<p>
-  You can pass "Campaign type" and "Campaign data". The "type" determines for what
-  purpose the attribution data is provided. Depending on the type, the expected
-  data will differ, but usually that will be a string representation of a JSON
-  object.
+  For iOS 14+ use the <code>recordAttributionID("IDFA")</code> function instead
+  of <code>Countly.enableAttribution()</code>
 </p>
 <p>
-  <span>You can use <code>recordDirectAttribution</code> to set attribution values during initialization</span><span>.</span>
+  You can use <code>recordAttributionID</code> function to specify IDFA for campaign
+  attribution
 </p>
-<pre><code class="JavaScript">String campaignData = 'JSON_STRING';<br>CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY);<br>config.recordDirectAttribution('CAMPAIN_TYPE', campaignData);</code><span><br></span></pre>
+<pre><code class="JavaScript">Countly.recordAttributionID("IDFA_VALUE_YOU_GET_FROM_THE_SYSTEM");</code></pre>
 <p>
-  You can also use <code>recordDirectAttribution</code> function to manually report
-  attribution later:
-</p>
-<pre><code class="JavaScript">String campaignData = 'JSON_STRING';<br>Countly.recordDirectAttribution('CAMPAIN_TYPE', campaignData);</code></pre>
-<p>
-  Currently this feature is limited and accepts data only in a specific format
-  and for a single type. That type is "countly". it would be used to record install
-  attribution. The data also needs to be formatted in a specific way. Either with
-  the campaign id or with the campaign id and campaign user id.
-</p>
-<pre><code class="JavaScript">String campaignData = '{cid:"[PROVIDED_CAMPAIGN_ID]", cuid:"[PROVIDED_CAMPAIGN_USER_ID]"}';<br>Countly.recordDirectAttribution('countly', campaignData);</code></pre>
-<h3>
-  <span>Indirect Attribution</span>
-</h3>
-<p>
-  This feature would be used to report things like advertising ID's. For each platform
-  those would be different values. For the most popular keys we have a class with
-  predefined values to use, it is called "AttributionKey".
-</p>
-<p>
-  <span>You can use <code>recordDirectAttribution</code> to set attribution values during initialization</span><span>.</span>
-</p>
-<pre><code class="JavaScript">Map&lt;String, String&gt; attributionValues = {};<br>if(Platform.isIOS){<br>  attributionValues[AttributionKey.IDFA] = 'IDFA';<br>}<br>else {<br>  attributionValues[AttributionKey.AdvertisingID] = 'AdvertisingID';<br>}<br><br>CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY);<br>config.recordIndirectAttribution(attributionValues);</code><span></span></pre>
-<p>
-  You can also use <code>recordIndirectAttribution</code> function to manually
-  report attribution later
-</p>
-<pre><code class="JavaScript">Map&lt;String, String&gt; attributionValues = {};<br>if(Platform.isIOS){<br>  attributionValues[AttributionKey.IDFA] = 'IDFA';<br>}<br>else {<br>  attributionValues[AttributionKey.AdvertisingID] = 'AdvertisingID';<br>}<br><br>Countly.recordIndirectAttribution(attributionValues);</code></pre>
-<p>
-  In case you would be accessing IDFA for ios, for iOS 14+ due to Apple changes
-  regarding Application Tracking, you need to ask the user for permission to track
-  the Application.
+  For iOS 14+ due to Apple changes regarding Application Tracking, you need to
+  ask the user for permission to track the Application.
 </p>
 <h2>Forcing HTTP POST</h2>
 <p>
@@ -1336,7 +1273,7 @@ CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY);<br>config.setParamete
   can use the same function later in the app's life cycle to disable the override.
   This function has to be called every time the app starts.
 </p>
-<pre><code class="JavaScript"> CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY);<br>config.setHttpPostForced(true); // default is false</code></pre>
+<pre><code class="JavaScript"> Countly.setHttpPostForced(true); // default is false</code></pre>
 <h2>Interacting with the internal request queue</h2>
 <p>
   When recording events or activities, the requests don't always get sent immediately.
@@ -1370,12 +1307,7 @@ Countly.removeDifferentAppKeysFromQueue();</code></pre>
   event count reaches a threshold. By default it is 10. If you would like to change
   this, call:
 </p>
-<pre><code class="JavaScript">CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY);<br>config.setEventQueueSizeToSend(6);</code></pre>
-<h2>Setting max queue size limit</h2>
-<p>
-  <span>You can specify the max request queue size by calling <code>setMaxRequestQueueSize</code></span><span> of the <code>CountlyConfig</code></span><span> object before starting Countly. It is used to limit the number of requests stored when there is no connection to your Countly Server. </span><span>If the max queue size limit</span><span>&nbsp;is not explicitly set, the default setting will be at&nbsp;</span><strong>1000</strong><span>.</span>
-</p>
-<pre><code class="JavaScript">CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY);<br>config.setMaxRequestQueueSize(2500);</code><span><br></span></pre>
+<pre><code class="JavaScript">Countly.eventSendThreshold(6);</code></pre>
 <h2>Checking if the SDK has been initialized</h2>
 <p>
   In case you would like to check if init has been called, you may use the following
