Flutter : Set User properties during init

--- a/flutter/21.11.md
+++ b/flutter/21.11.md
@@ -1,14 +1,14 @@
 <p>
   This document will guide you through the process of Countly SDK installation
-  and it applies to version 22.02.0
+  and it applies to version 21.11.0
 </p>
 <div class="callout callout--info">
   <p class="callout__title">
     <span class="wysiwyg-font-size-large"><strong>Older documentation</strong></span>
   </p>
   <p>
-    To access the documentation for version 21.11 and older, click
-    <a href="/hc/en-us/articles/9667091699097" target="_self" rel="“undefined”">here.</a>
+    To access the documentation for version 20.11 and older, click
+    <a href="/hc/en-us/articles/4409295642137" target="_self" rel="undefined">here.</a>
   </p>
 </div>
 <p>
@@ -1023,16 +1023,6 @@ Countly.reportFeedbackWidgetManually(chosenWidget, retrievedWidgetData , reporte
 </p>
 <p>
   Note that this feature is available only for Enterprise Edition.
-</p>
-<p>
-  We recommend to set the user properties during initialization, you can set the
-  predefined and custom user properties during initialization:
-</p>
-<pre><code class="“JavaScript”">var userProperties = {<br>    ‘customProperty’: ‘custom Value’,<br>    ‘username’: ‘USER_NAME’,<br>    ‘email’: ‘USER_EMAIL’<br>};<br>CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY);
-config.setUserProperties(userProperties); </code></pre>
-<p>
-  If you want to set the user data after init, you can use
-  <code class="“JavaScript”">Countly.setUserData(USER_DATA);</code>:
 </p>
 <pre><code class="JavaScript">// example for setting user data
 Map&lt;String, Object&gt; options = {
